fix(whomadeit): align center the vlogs

--- a/src/components/top-section-whomadeit.less
+++ b/src/components/top-section-whomadeit.less
@@ -1,4 +1,4 @@
-@import "../variables.less";
+@import '../variables.less';
 
 section#whomadeit {
   position: relative;
@@ -39,6 +39,11 @@ section#whomadeit {
   .caption {
     margin-top: 1rem;
     font-style: italic;
+  }
+
+  .vlogs {
+    margin-left: auto !important;
+    margin-right: auto !important;
   }
 
   .embed-container {
